--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item active">
-                        <a class="nav-link navbar-brand" href="#home">Home</a>
+                        <a class="nav-link navbar-brand" href="#home">Acceuil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navbar-brand" href="#about">About</a>
+                        <a class="nav-link navbar-brand" href="#about">A propos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link navbar-brand" href="#services">Services</a>
@@ -58,7 +58,7 @@
   </section>
   <!-- about section -->
   <section class="container mt-4 pt-4 section" id="about">
-    <h1 class="text-center">About Me</h1>
+    <h1 class="text-center">A propos</h1>
     
     <div class="row mt-3">
         <div class="col-lg-4 col-md-6 mb-3">
@@ -171,7 +171,7 @@
     <!-- https://getbootstrap.com/docs/5.2/forms/overview -->
 
     <section class="container mt-3 section" id="contact">
-        <h1 class="text-center">Contact Me</h1>
+        <h1 class="text-center">Contact Moi</h1>
 
         <div class="row mt-4">
             <div class="col-lg-6">
@@ -197,7 +197,7 @@
                         <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
                     </div>
                 </form>
-                <a href="mailto:sacrentnadou2.0@gmail.com" class="btn btn-success mt-3">Contact Me</a>
+                <a href="mailto:sacrentnadou2.0@gmail.com" class="btn btn-success mt-3">Contact Moi</a>
             </div>
         </div>
         
