mis a jour de la redondance sur la partie a propos

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     
         <div class="col-lg-7 col-md-6">
-            <p>Je suis Ntandou Sacre Ray Marcel, originaire du Congo Brazzaville et actuellement basé à Dakar, Sénégal. Je suis développeur web fullstack, passionné par la création d'expériences numériques innovantes. Mon expertise couvre à la fois le développement front-end avec React et le développement back-end avec Laravel et Symfony. Je m'efforce toujours de rester à la pointe des dernières technologies. En dehors du développement, je suis passionné par la lecture, la musique et le sport.</p>
+            <p>Je suis Ntandou Sacre Ray Marcel, originaire du Congo Brazzaville et actuellement basé à Dakar, Sénégal. Je suis développeur web fullstack, passionné par la création d'expériences numériques innovantes. Mon expertise couvre à la fois le développement front-end avec React et le développement back-end avec Laravel et Symfony.</p>
             <div class="row mt-3">
                 <div class="col-md-12">
                     <ul>
